# ComfyUI-MimicMotionWrapper

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
configs/: unet_config.json
examples/: mimic_motion_example_01.json  mimic_motion_example_02.json
mimicmotion/dwpose/: dwpose_detector.py  jit_pose.py  util.py  wholebody.py
mimicmotion/modules/: unet.py
mimicmotion/pipelines/: pipeline_mimicmotion.py
models/: mimic_motion_pose_net.safetensors
